[~]docs: README: Remplacement du README